@@ -2643,6 +2643,7 @@ CREATE TABLE filecontainers (
 	netdevid int(11) DEFAULT NULL,
 	netnodeid int(11) DEFAULT NULL,
 	messageid int(11) DEFAULT NULL,
+	netdevmodelid int(11) DEFAULT NULL,
 	PRIMARY KEY (id),
 	CONSTRAINT filecontainers_creatorid_fkey
 		FOREIGN KEY (creatorid) REFERENCES users (id) ON DELETE SET NULL ON UPDATE CASCADE,
@@ -2651,7 +2652,9 @@ CREATE TABLE filecontainers (
 	CONSTRAINT filecontainers_netnodeid_fkey
 		FOREIGN KEY (netnodeid) REFERENCES netnodes (id) ON DELETE CASCADE ON UPDATE CASCADE,
 	CONSTRAINT filecontainers_messageid_fkey
-		FOREIGN KEY (messageid) REFERENCES messages (id) ON DELETE CASCADE ON UPDATE CASCADE
+		FOREIGN KEY (messageid) REFERENCES messages (id) ON DELETE CASCADE ON UPDATE CASCADE,
+	CONSTRAINT filecontainers_netdevmodelid_fkey
+		FOREIGN KEY (netdevmodelid) REFERENCES netdevicemodels (id) ON DELETE CASCADE ON UPDATE CASCADE
 ) ENGINE=InnoDB;
 
 # --------------------------------------------------------
@@ -3661,4 +3664,4 @@ INSERT INTO netdevicemodels (name, alternative_name, netdeviceproducerid) VALUES
 ('XR7', 'XR7 MINI PCI PCBA', 2),
 ('XR9', 'MINI PCI 600MW 900MHZ', 2);
 
-INSERT INTO dbinfo (keytype, keyvalue) VALUES ('dbversion', '2020013101');
+INSERT INTO dbinfo (keytype, keyvalue) VALUES ('dbversion', '2020020500');
