@@ -10,7 +10,7 @@
 	{include file="netnode/netnodedevices.html"}
 {/block}
 {block name=netnodeattachments}
-	{include file="attachments.html" attachmenttype="netnodeid" attachmentresourceid=$nodeinfo.id}
+	{include file="attachments.html" attachmenttype="netnodeid" attachmentresourceid=$nodeinfo.id filecontainers=$filecontainers_for_node}
 {/block}
 {block name=netnodetickets}
 	{include file="netnode/netnodetickets.html"}
